hphp/hack/test/typecheck/shapes_cc_15.php
<?hh // strict

/* Invalid construction: shape field names may not start with numbers */

function test(): void {
  $x = shape('123abc' => 1, 'field2' => true);
}
